# ktool

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  cmake_win.bat
res/: cube.json
shaders/: basic.fs.glsl  basic.vs.glsl
src/ktool/: CMakeLists.txt  argparser.cpp  argparser.hpp  argparser.test.cpp  main.cpp  surface.cpp  surface.hpp  surface.test.cpp  surface_io.cpp  surface_io.hpp  surface_io.test.cpp
